--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-  <title>Lakshi Constructions</title>
+  <title>RADHA KUNJ COLONY</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00f7ffc0;">
-    <a class="navbar-brand " href="#">Lakshmi Constructions</a>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000c0;">
+    <a class="navbar-brand " href="#">RADHA KUNJ COLONY</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
 
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/ContactUs.html">Contact Us</a>
         </li>
@@ -47,27 +47,51 @@
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="5">
-        <img src="images/construction.jpeg" class="d-block w-100" alt="...">
+        <img src="images/lane1.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First Class Service</h5>
-          <p>Engineered by civil engineers</p>
+          <!-- <h5>First Class Service</h5>
+          <p>Engineered by civil engineers</p> -->
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5">
-        <img src="images/construction2.jpeg" class="d-block w-100" alt="...">
+        <img src="images/Park.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Discounted Rates</h5>
-          <p>Discounted rates .Minimum in the area</p>
+          <!-- <h5>Discounted Rates</h5>
+          <p>Discounted rates .Minimum in the area</p> -->
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5">
-        <img src="images/construction3.jpeg" class="d-block w-100" alt="...">
+        <img src="images/garden.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p></p>
+          <!-- <h5>Third slide label</h5>
+          <p></p> -->
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="5">
+        <img src="images/lane4.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Third slide label</h5>
+          <p></p> -->
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="5">
+        <img src="images/lane3.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Third slide label</h5>
+          <p></p> -->
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="5">
+        <img src="images/lane2.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <!-- <h5>Third slide label</h5>
+          <p></p> -->
         </div>
       </div>
     </div>
@@ -79,6 +103,14 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
+  <div class="card" style="width: 9rem; height: 9rem;">
+    <img src="images/blank_face.jpg" class="card-img-top" alt="..." style="width: 9rem; height: 5rem;">
+    <div class="card-body " style="width: 9rem; height: 5rem;">
+      <h5 class="card-title">President</h5>
+      <font size="1">Shree Shyama Charan Gangwar</font>
+      <p></p>
+    </div>
   </div>
   <!-- Optional JavaScript; choose one of the two! -->
 
