rounded corners for images in carousel

--- a/index.html
+++ b/index.html
@@ -57,42 +57,42 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5">
-          <img src="images/lane1.jpeg" class="d-block w-100" alt="...">
+          <img src="images/lane1.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>First Class Service</h5>
             <p>Engineered by civil engineers</p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5">
-          <img src="images/Park.jpeg" class="d-block w-100" alt="...">
+          <img src="images/Park.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>Discounted Rates</h5>
             <p>Discounted rates .Minimum in the area</p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5">
-          <img src="images/garden.jpeg" class="d-block w-100" alt="...">
+          <img src="images/garden.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>Third slide label</h5>
             <p></p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5">
-          <img src="images/lane4.jpeg" class="d-block w-100" alt="...">
+          <img src="images/lane4.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>Third slide label</h5>
             <p></p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5">
-          <img src="images/lane3.jpeg" class="d-block w-100" alt="...">
+          <img src="images/lane3.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>Third slide label</h5>
             <p></p> -->
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5">
-          <img src="images/lane2.jpeg" class="d-block w-100" alt="...">
+          <img src="images/lane2.jpeg" class="d-block w-100 rounded-corners" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <!-- <h5>Third slide label</h5>
             <p></p> -->
