--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
+  <link rel="stylesheet" href="/cssScripts/TypingAnimation.css">
+  <link rel="stylesheet" href="cssScripts/myStyle.css">
   <title>RADHA KUNJ COLONY</title>
 </head>
 
@@ -174,10 +175,14 @@
 
     </div>
   </div>
-  <div class="square" data-mdb-toggle="animation" data-mdb-animation-start="onHover" data-mdb-animation="fade-in-left"
-    data-mdb-animation-reset="true" style="animation-duration: 500ms;">
-    fade-in-left
+  <div class="container-fluid pt-2 pb-3 bg-dark">
+    <p class="sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+      aliquip ex ea commodo consequat. </p>
   </div>
+
+
+
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -196,7 +201,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="cssScripts/myStyle.css">
+
+
+  <script src="javaScripts/TypingAnimation.js"></script>
+
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
